--- a/logger/build.gradle
+++ b/logger/build.gradle
@@ -1,5 +1,30 @@
 apply plugin: 'com.android.library'
 
+
+ext {
+    bintrayRepo = 'maven'
+    bintrayName = 'android-logger'
+
+    publishedGroupId = 'org.unfoldingword.tools'
+    libraryName = 'Android Logger'
+    artifact = 'android-logger'
+
+    libraryDescription = 'A better logging tool for android'
+
+    siteUrl = 'https://github.com/unfoldingWord-dev/android-logger'
+    gitUrl = 'https://github.com/unfoldingWord-dev/android-logger.git'
+
+    libraryVersion = '0.1.0'
+
+    developerId = 'neutrinog'
+    developerName = 'Joel Lonbeck'
+    developerEmail = 'joel@neutrinographics.com'
+
+    licenseName = 'GNU GENERAL PUBLIC LICENSE, Version 2.0'
+    licenseUrl = 'http://www.gnu.org/licenses/gpl-2.0.en.html'
+    allLicenses = ["GPL-2.0"]
+}
+
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
@@ -8,7 +33,7 @@ android {
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
-        versionName "1.0"
+        versionName "0.1.0"
     }
     buildTypes {
         release {
@@ -23,3 +48,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.1'
 }
+
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
