--- a/logger/build.gradle
+++ b/logger/build.gradle
@@ -3,18 +3,18 @@ apply plugin: 'com.android.library'
 
 ext {
     bintrayRepo = 'maven'
-    bintrayName = 'android-logger'
+    bintrayName = 'logger'
 
     publishedGroupId = 'org.unfoldingword.tools'
-    libraryName = 'Android Logger'
-    artifact = 'android-logger'
+    libraryName = 'Logger'
+    artifact = 'logger'
 
-    libraryDescription = 'A better logging tool for android'
+    libraryDescription = 'A better logging tool for Android'
 
     siteUrl = 'https://github.com/unfoldingWord-dev/android-logger'
     gitUrl = 'https://github.com/unfoldingWord-dev/android-logger.git'
 
-    libraryVersion = '0.1.0'
+    libraryVersion = '1.0.0'
 
     developerId = 'neutrinog'
     developerName = 'Joel Lonbeck'
@@ -26,14 +26,14 @@ ext {
 }
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    compileSdkVersion 22
+    buildToolsVersion "22.0.1"
 
     defaultConfig {
         minSdkVersion 15
-        targetSdkVersion 23
+        targetSdkVersion 22
         versionCode 1
-        versionName "0.1.0"
+        versionName "1.0.0"
     }
     buildTypes {
         release {
@@ -46,7 +46,6 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.1.1'
 }
 
 apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
