--- a/logger/build.gradle
+++ b/logger/build.gradle
@@ -14,7 +14,7 @@ ext {
     siteUrl = 'https://github.com/unfoldingWord-dev/android-logger'
     gitUrl = 'https://github.com/unfoldingWord-dev/android-logger.git'
 
-    libraryVersion = '1.3.1'
+    libraryVersion = '2.0.0'
 
     developerId = 'neutrinog'
     developerName = 'Joel Lonbeck'
@@ -32,8 +32,8 @@ android {
     defaultConfig {
         minSdkVersion 15
         targetSdkVersion 22
-        versionCode 5
-        versionName "1.3.1"
+        versionCode 6
+        versionName "2.0.0"
     }
     buildTypes {
         release {
@@ -46,6 +46,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+    compile 'org.unfoldingword.tools:http:2.3.0'
 }
 
 apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
